[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmbelt"
version = "0.3.0"
description = "A tiny, dependency-free tool belt for LLMs: token counting, cost estimation, retries, prompt templates, and text chunking."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "YoungAlpaccino" }]
keywords = ["llm", "ai", "tokens", "tiktoken", "prompt", "rag", "openai", "anthropic", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = ["pytest>=7", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/YoungAlpaccino/llmbelt"
Repository = "https://github.com/YoungAlpaccino/llmbelt"
Issues = "https://github.com/YoungAlpaccino/llmbelt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmbelt = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
